[build-system]
requires = ["scikit-build-core >=0.4.3"]
build-backend = "scikit_build_core.build"

[project]
name = "oaktree"
version = "0.0.1"
description = "Render large point clouds fast using Octrees in Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Eduardo Arnold", email = "https://github.com/eduardohenriquearnold" },
]
classifiers = [
    "License :: MIT",
]

[project.urls]
Homepage = "https://github.com/eduardohenriquearnold/oaktree"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"